[package]
name = "grapplefrcdriver"
version = "2024.3.0"
edition = "2021"

include = [
    "src/**/*",
    "Cargo.toml",
    "build.rs",
    "WPILIB_LICENSE",
    "HALWrapper.h",
    "buildlibs/**/*",]

[lib]
name = "grapplefrcdriver"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["c", "jni", "simulation"]
c = []
jni = []
simulation = ["dep:grapple-lasercan"]

[dependencies]
anyhow = "1.0.75"
bounded-static = "0.7.0"
grapple-frc-msgs = "~2024.4.0"
grapple-lasercan = { version = "~2024.2.0", optional = true }
jni = "0.21.1"

[build-dependencies]
cbindgen = "0.26.0"
bindgen = "0.53.1"
