[package]
name = "grpl-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "grpl"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
grapplefrcdriver = { path = "../grapplefrcdriver", version = "0.1.0" }
grapple-frc-msgs = "~2024.0.6"

