[package]
name = "libgrapplefrc-py"
version = "2025.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libgrapplefrc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = [ "abi3-py38" ] }
grapplefrcdriver = { path = "../grapplefrcdriver", features = ["pyo3", "default"] }